--- a/src/main/java/gui/UserForm.form
+++ b/src/main/java/gui/UserForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.UserForm">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="257" height="533"/>
@@ -10,14 +10,14 @@
       <focusCycleRoot value="false"/>
       <opaque value="true"/>
     </properties>
-    <border type="bevel-raised" title="" title-justification="2">
+    <border type="none" title="" title-justification="2">
       <font/>
     </border>
     <children>
       <grid id="c9153" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
@@ -66,7 +66,7 @@
               <foreground color="-197889"/>
               <horizontalTextPosition value="0"/>
               <iconTextGap value="4"/>
-              <margin top="0" left="20" bottom="0" right="20"/>
+              <margin top="0" left="0" bottom="0" right="0"/>
               <text value="Login"/>
             </properties>
           </component>
@@ -107,15 +107,26 @@
       </grid>
       <component id="97924" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
-          <font name="Monotype Corsiva" size="48" style="2"/>
+          <font name="Monotype Corsiva" size="36" style="0"/>
           <foreground color="-131085"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="Welcome"/>
+          <text value="Welcome to"/>
+        </properties>
+      </component>
+      <component id="b638a" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-9187370"/>
+          <font name="Monotype Corsiva" size="36" style="0"/>
+          <foreground color="-131085"/>
+          <text value="Galatea"/>
         </properties>
       </component>
     </children>
