--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -71,7 +71,7 @@
           </grid>
           <component id="16bd9" class="javax.swing.JButton" binding="deleteToDoButton" default-binding="true">
             <constraints>
-              <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16759297"/>
@@ -79,24 +79,33 @@
               <text value="Delete ToDo"/>
             </properties>
           </component>
-          <component id="da564" class="javax.swing.JButton" binding="modifyToDoButton" default-binding="true">
+          <component id="da564" class="javax.swing.JButton" binding="orderToDoButton" default-binding="true">
             <constraints>
-              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-14184705"/>
               <font name="Microsoft Himalaya" size="20" style="0"/>
-              <text value="Modify ToDo"/>
+              <text value="Order ToDo"/>
             </properties>
           </component>
           <component id="fe384" class="javax.swing.JButton" binding="addToDoButton" default-binding="true">
             <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-16759297"/>
               <font name="Microsoft Himalaya" size="20" style="0"/>
               <text value="Add ToDo"/>
+            </properties>
+          </component>
+          <component id="1c2a1" class="javax.swing.JButton" binding="dueDateButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-14184705"/>
+              <text value="Due Date"/>
             </properties>
           </component>
         </children>
