aggiunta cambio colore sfondo dei todo

--- a/src/main/java/gui/ToDoForm.form
+++ b/src/main/java/gui/ToDoForm.form
@@ -6,19 +6,19 @@
       <xy x="20" y="20" width="653" height="501"/>
     </constraints>
     <properties>
-      <background color="-6231077"/>
+      <background color="-2513409"/>
       <minimumSize width="653" height="501"/>
       <preferredSize width="653" height="501"/>
     </properties>
     <border type="bevel-raised"/>
     <children>
-      <grid id="a9a11" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a9a11" binding="campo1" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-9187370"/>
+          <background color="-5291777"/>
         </properties>
         <border type="bevel-raised"/>
         <children>
@@ -28,7 +28,7 @@
             </constraints>
             <properties>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <text value="Name:"/>
             </properties>
           </component>
@@ -39,7 +39,7 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <name value=""/>
               <text value=""/>
             </properties>
@@ -50,7 +50,7 @@
             </constraints>
             <properties>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <text value="Description:"/>
             </properties>
           </component>
@@ -61,7 +61,7 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
             </properties>
           </component>
           <component id="2ed63" class="javax.swing.JLabel">
@@ -70,7 +70,7 @@
             </constraints>
             <properties>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <text value="Due Date:"/>
             </properties>
           </component>
@@ -81,7 +81,7 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
             </properties>
           </component>
           <component id="99e93" class="javax.swing.JLabel">
@@ -90,7 +90,7 @@
             </constraints>
             <properties>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <text value="URL:"/>
             </properties>
           </component>
@@ -101,7 +101,7 @@
               </grid>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
             </properties>
           </component>
         </children>
@@ -121,46 +121,46 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <grid id="bc904" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="bc904" binding="campo2" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-9187370"/>
+          <background color="-5291777"/>
         </properties>
         <border type="bevel-raised"/>
         <children>
           <component id="f2b82" class="javax.swing.JButton" binding="shareButton" default-binding="true">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1114125"/>
+              <foreground color="-16777216"/>
               <text value="Share "/>
             </properties>
           </component>
           <component id="3ea8c" class="javax.swing.JButton" binding="changeShareButton" default-binding="true">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <text value="Change Share"/>
             </properties>
           </component>
           <component id="88e64" class="javax.swing.JComboBox" binding="members">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-16212568"/>
+              <foreground color="-16777216"/>
               <model>
                 <item value="Members"/>
               </model>
@@ -168,26 +168,34 @@
           </component>
           <component id="1bce0" class="javax.swing.JButton" binding="buttonSave">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-14184705"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
-              <foreground color="-1"/>
+              <foreground color="-16777216"/>
               <horizontalTextPosition value="0"/>
               <text value="Save"/>
             </properties>
           </component>
           <vspacer id="11f76">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <vspacer id="b7b66">
+          <component id="37721" class="javax.swing.JComboBox" binding="colorChange">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-          </vspacer>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <model>
+                <item value="Color"/>
+              </model>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
